--- a/script/jupyter/image_generator.ipynb
+++ b/script/jupyter/image_generator.ipynb
@@ -27,16 +27,16 @@
     "Default: fontpath = \"System/Library/Fonts/HelveticaNeue.ttc\"\n",
     "\n",
     "## Create stimuli for each trial\n",
-    "In each trial, participants see one picture, which shows sheet music with expressive notation (the current skill; e.g., articulation) and the current condition (e.g., teaching) and the current trial number.\n",
+    "In each trial, participants see one picture, which shows sheet music with expressive notation, the current condition and the current trial number.\n",
     "\n",
     "Participants perform the music with one expression (e.g., articulation) 8 times in each condition (e.g., the teaching condition).\n",
     "\n",
-    "- Three skills: articulation, dynamics, tempoChange\n",
-    "- Two conditions: teaching vs. performing\n",
+    "- Three skills: articulation, dynamics\n",
+    "- Two conditions: teaching vs. performing (i.e., Do you best 1; as a teacher / 2; as a performer).\n",
     "- One block = 8 trials\n",
     "\n",
     "Total number of stimuli:\n",
-    "3 skills * 2 conditions * 8 trials = 48 stimuli\n",
+    "2 skills * 2 conditions * 8 trials = 32 stimuli\n",
     "\n",
     "### Examples\n",
     "Example 1: The **first** trial of the **teaching-articulation** condition.\n",
@@ -45,7 +45,11 @@
     "\n",
     "Example 2: The **third** trial of the **performing-dynamics** condition.\n",
     "<p><img src=\"./stimuli/3_p_stim_d.png\" width = 50% align = left>\n",
-    "<br clear=\"all\"></p>"
+    "<br clear=\"all\"></p>\n",
+    "\n",
+    "## Outcomes\n",
+    "1. One black screen\n",
+    "2. 32 experimental stimuli"
    ]
   },
   {
