--- a/script/jupyter/image_generator.ipynb
+++ b/script/jupyter/image_generator.ipynb
@@ -26,17 +26,17 @@
     "The location of a font file (i.e., fontpath) should be replaced according to your system.<br>\n",
     "Default: fontpath = \"System/Library/Fonts/HelveticaNeue.ttc\"\n",
     "\n",
-    "## Create stimuli for each trial\n",
+    "## 1. Create stimuli for each trial\n",
     "In each trial, participants see one picture, which shows sheet music with expressive notation, the current condition and the current trial number.\n",
     "\n",
     "Participants perform the music with one expression (e.g., articulation) 8 times in each condition (e.g., the teaching condition).\n",
     "\n",
-    "- Three skills: articulation, dynamics\n",
+    "- Two skills: articulation, dynamics\n",
     "- Two conditions: teaching vs. performing (i.e., Do you best 1; as a teacher / 2; as a performer).\n",
     "- One block = 8 trials\n",
     "\n",
     "Total number of stimuli:\n",
-    "2 skills * 2 conditions * 8 trials = 32 stimuli\n",
+    "2 skills * 2 conditions * 8 trials = 32 images\n",
     "\n",
     "### Examples\n",
     "Example 1: The **first** trial of the **teaching-articulation** condition.\n",
@@ -99,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create stimuli for practice\n",
+    "## 2. Create stimuli for practice\n",
     "\n",
     "In a practice trial, participants see the following three different pictures.\n",
     "1. Excerpt without muscial expression\n",
